--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,92 @@
 .App {
-    text-align: center;
+  text-align: center;
 }
 
 .App-logo {
-    height: 40vmin;
-    pointer-events: none;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-    color: #61dafb;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 header {
-    background: #2f63e9 !important;
+  background: #2f63e9 !important;
 }
 
 h1 {
-    width: max-content;
-    margin: 50px auto;
+  width: max-content;
+  margin: 50px auto;
 }
 
 a {
-    margin: 10px auto 25px;
+  margin: 10px auto 25px;
 }
 
 .primary-btn {
-    background-color: #496dc9 !important;
-    padding: 10px 25px !important;
-    color: white !important;
-    margin: 25px auto !important;
+  background-color: #496dc9 !important;
+  padding: 10px 25px !important;
+  color: white !important;
+  margin: 25px auto !important;
+  border: none;
+  border-radius: 8px;
+}
+
+.secondary-btn {
+  background-color: #5985f4 !important;
+  padding: 5px 10px !important;
+  color: white !important;
+  margin: 0 5px !important;
+  border: none;
+  border-radius: 8px;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 500px;
-    width: 500px;
-    background-color: #f0f0f0;
-    border-radius: 8px;
-    margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 500px;
+  width: 500px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  margin: auto;
 }
 
-form>div {
-    margin: 10px !important;
+form > div {
+  margin: 10px !important;
+}
+
+div > .primary-btn {
+  margin: 10px !important;
+}
+
+li {
+  margin: 10px 0;
 }
